--- a/Views/Moj/student.cshtml
+++ b/Views/Moj/student.cshtml
@@ -6,11 +6,7 @@
 
 <h2>student</h2>
 <h3>
-    Ime=@ViewBag.Ime
-</h3>
-<h3>
-    Prezime=@ViewBag.Prezime
-</h3>
-<h3>
-    GodinaRodenja=@ViewBag.GodinaRodenja
+    @ViewBag.Ime<br />
+    @ViewBag.Prezime<br />
+    @ViewBag.GodinaRodenja<br />
 </h3>
